<resources>
    <string name="app_name">Fhir Health Access</string>
    <string name="connection">Connexion</string>
    <string name="email_address">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="status">Statut :</string>
    <string name="last_name">Nom :</string>
    <string name="first_name">Prénom :</string>
    <string name="gender">Sexe :</string>
    <string name="birthdate">Date de naissance :</string>
    <string name="phone">Téléphone :</string>
    <string name="addresse">Adresse :</string>
    <string name="marital_status">État civil :</string>
    <string name="language">Langue :</string>
    <string name="inactive">Inactif</string>
    <string name="active">Actif</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="other">Autre</string>
    <string name="default_date">01/01/1970</string>
    <string name="add">Ajouter</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
</resources>