<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewStatut"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/status" />

            <ToggleButton
                android:id="@+id/toggleButtonStatut"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/status"
                android:textOff="@string/inactive"
                android:textOn="@string/active" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/editTextNom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="20"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPrenom"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/editTextPrenom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="20"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/radioGroupeSexe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonH"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonF"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButtonA"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/other" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDateNaissance"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/birthdate" />

            <Button
                android:id="@+id/buttonDateNaissance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="setBirthdate"
                android:text="@string/default_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTelephone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/editTextTelephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="15"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAdresse"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/addresse" />

            <EditText
                android:id="@+id/editTextAdresse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="40"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEtatCivil"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/marital_status" />

            <EditText
                android:id="@+id/editTextEtatCivil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="20"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLangue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/language" />

            <EditText
                android:id="@+id/editTextLangue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="20"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="addPatient"
            android:text="@string/add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>